--- a/index.html
+++ b/index.html
@@ -266,46 +266,83 @@
 
 <div class="container">
     <p><span class="header">Literature news</span></p>
-    <div id="literature_news">
+    <div class="literature_news">
      <ul>
          <li><a><img src="img/111.png" alt="picture" style="width: 342px; height: 553px;"></a>
              <p><span class="fontcaption">How literature can help people cope with mental health problems</p></span>
-             <p><span class="fontcaption_orange">Nathan Sandoval | 15.10.16</span></p>
+             <p><span class="fontcaption_orange">Nathan Sandoval </span> <span class="fontcaption_grey"> | 15.10.16</span></p>
          </li>
          <li><a><img src="img/222.png" alt="picture" style="width: 342px; height: 553px;"></a>
              <p><span class="fontcaption">Sales of 'Harry Potter and the Cursed Child' script book hit </span></p>
-             <p><span class="fontcaption_orange">Jacqueline Taylor | 23.10.16</span></p>
+             <p><span class="fontcaption_orange">Jacqueline Taylor</span> <span class="fontcaption_grey"> | 23.10.16</span></p>
          </li>
          <li><a><img src="img/333.png" alt="picture" style="width: 342px; height: 553px;"></a>
              <p><span class="fontcaption">Marvel introduces character Riri Williams, a woman who takes ov</span></p>
-             <p><span class="fontcaption_orange">Elizabeth Dixon | 16.10.15 </span></p>
+             <p><span class="fontcaption_orange">Elizabeth Dixon </span> <span class="fontcaption_grey">| 16.10.15</span> </p>
          </li>
      </ul>
      </div>
+
+
+<div class="literature_news_autor">
+
+    <div class="block_news">
+        <p><span class="font_comment">Association of Former Agents of the United States Secret Service
+            denounces anti-Clinton tell-all book - Politico</span></p>
+        <p><span class="fontcaption_orange">Lori Steves </span> <span class="fontcaption_grey">| 15.10.16</span></p>
+    </div>
+    <div class="block_news">
+        <p><span class="font_comment">Edmonton bookseller, publisher and activist Mel Hurtig dies at 84 -CBC </span></p>
+        <p><span class="fontcaption_orange">Michelle Taylor </span><span class="fontcaption_grey">| 28.10.16 </span></p>
+    </div>
+    <div class="block_news">
+        <p><span class="font_comment">5 Britons, 5 Americans, 2 Canadians and South African on short list for English
+            literature's Man Booker Prize </span> </p>
+        <p><span class="fontcaption_orange">Nicholas Guerrero</span><span class="fontcaption_grey">| 15.10.16</span></p>
+    </div>
+    <div class="block_news">
+        <p><span class="font_comment"> BBC to produce Les Miserables as 6 - part TV special
+            - The Guardian </span></p>
+        <p><span class="fontcaption_orange">Cyntia Simmon</span> <span class="fontcaption_grey">| 28.10.16 </span></p>
+    </div>
 </div>
 
-<div class="container">
-    <div class="block_news">
-        <p>Association of Former Agents of the United States Secret Service
-            denounces anti-Clinton tell-all book - Politico</p>
-        <p>Lori Steves | 15.10.16</p>
-    </div>
-    <div class="block_news">
-        <p>Edmonton bookseller, publisher and activist Mel Hurtig dies at 84 -CBC</p>
-        <p>Michelle Taylor | 28.10.16</p>
-    </div>
-    <div class="block_news">
-        <p>5 Britons, 5 Americans, 2 Canadians and South African on short list for English
-            literature's Man Booker Prize </p>
-        <p>Nicholas Guerrero | 15.10.16</p>
-    </div>
-    <div class="block_news">
-        <p> BBC to produce Les Miserables as 6 - part TV special
-            - The Guardian</span></p>
-        <p>Cyntia Simmons | 28.10.16</p>
-    </div>
-    <button>All news</button>
 </div>
+        <div class="button_all_news">
+            <button><span class="all_books">All news</span></button>
+        </div>
+
+
+
+    <div class=container>
+        <div slide_block1>
+            <img src="img/man.png" alt="man with dog" style="width: 866px; height: 632px;">
+        </div>
+        <div slide_block1>
+            <img src="img/lili.png" alt="lili" style="width: 353px; height: 513px;">
+        </div>
+        <div slide_block1>
+            <p><span class="header">Lily atnd the octopus</span></p>
+            <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote">| 5 *</span> </p>
+            <p><span class="text_info">In hac habitasse platea dictumst.
+                Vivamus adipiscing fermentum quam volutpat aliquam.
+                Integer et elit eget elit facilisis tristique.
+                Nam vel iaculis mauris.
+            </span></p>
+        </div>
+    </div>
+
+<div class="container">
+    <div class="popular_series"><span class="header">Popular series</span></div>
+    <div class="book_serias" >
+        <div class="book_1">
+            <img src="img/best1.png" alt="" style="width: 215px;"height="295px;">
+        </div>
+        <div class="book_"></div>
+    </div>
+</div>
+
+
 
 
 
