--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 
 </head>
 <body>
-    <header class="wrap">
-        <div class="container">
-            <nav>
-                <div class="menu">
+        <header class="container wrap">
+            <nav class="menu">
                     <div class="block1">
                         <div class="menublock1">
                             <img src="img/icons_svg/logo.svg" alt="logo">
@@ -41,10 +39,8 @@
                             <li><img src="img/Userpic.png" alt="Userpic" style="width: 39px; height: 39px;"></li>
                         </ul>
                     </div>
-                </div>
             </nav>
-        </div>
-    </header> <!-- end header -->
+        </header> <!-- end header -->
     <div class="container">
         <div class="bookslide ">
             <div class="bookschoice">
