changed position image _ job on the lesson

--- a/index.html
+++ b/index.html
@@ -41,11 +41,21 @@
                     </div>
             </nav>
         </header> <!-- end header -->
-    <div class="container">
-        <div class="bookslide ">
+    <div class="container ">
+        <div class="bookslide">
             <div class="bookschoice">
-                <img src="img/bookharry.png" alt="bookharry" style="width: 496px; height: 679px; ">
+                <div class="img_Harry">
+                    <div class="category_slider">
+                        <p><span class="fontmenu_title">Fantasy</span></p>
+                    </div>
+                    <img src="img/cover.png" alt="bookharry" style="width: 412px; height: 595px; ">
+                </div>
+                <div class="img_hogwarts">
+                    <img src="img/hogwarts1.png" alt="hogwards" style="width: 417px; height: 735px">
+                </div>
+
             </div>
+
             <div class="booktext">
                 <p><span class="font_slider_grey">Harry Potter And  <br>
                                 The Sorcerer's Stone</span></p>
