modified:   css/style.css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 </head>
 <body>
-        <header class="container wrap">
-            <nav class="menu">
+        <header class="wrap">
+            <nav class="menu container">
                     <div class="block1">
                         <div class="menublock1">
                             <img src="img/icons_svg/logo.svg" alt="logo">
@@ -40,9 +40,7 @@
                         </ul>
                     </div>
             </nav>
-        </header> <!-- end header -->
-    <div class="container ">
-        <div class="bookslide">
+        <div class="bookslide container">
             <div class="bookschoice">
                 <div class="img_Harry">
                     <div class="category_slider">
@@ -53,7 +51,7 @@
                 <div class="img_hogwarts">
                     <img src="img/hogwarts1.png" alt="hogwards" style="width: 417px; height: 735px">
                 </div>
-
+                <div class="clearfix"></div>
             </div>
 
             <div class="booktext">
@@ -67,7 +65,7 @@
             </div>
             <div class="clearfix"></div>
         </div>
-    </div>
+    </header> <!-- end header -->
     <div class="container">
         <div class="presentation_book">
             <div class="presentation_book1">
