modified menu logo

--- a/index.html
+++ b/index.html
@@ -16,27 +16,22 @@
 <body>
         <header class="wrap">
             <nav class="menu container">
-                    <div class="block1">
-                        <div class="menublock1">
-                            <img src="img/icons_svg/logo.svg" alt="logo">
-                        </div>
+                    <div class="menu_logo">
                     </div>
-                    <div class="block2">
+                    <div class="menu_list">
                         <ul>
-                            <li><span class="fontmenu"><a href="BOOKS">BOOKS</a></span></li>
-                            <li><span class="fontmenu"><a href="WRITERS">WRITERS</a></span></li>
-                            <li><span class="fontmenu"><a href="PUBLISHERS">PUBLISHERS</a></span></li>
-                            <li><span class="fontmenu"><a href="BLOG">BLOG</a></span></li>
-                            <li><span class="fontmenu"><a href="CONTACT">CONTACT</a></span></li>
+                            <li><span class="fontmenu"><a href="#">BOOKS</a></span></li>
+                            <li><span class="fontmenu"><a href="#">WRITERS</a></span></li>
+                            <li><span class="fontmenu"><a href="#">PUBLISHERS</a></span></li>
+                            <li><span class="fontmenu"><a href="#">BLOG</a></span></li>
+                            <li><span class="fontmenu"><a href="#">CONTACT</a></span></li>
                         </ul>
                     </div>
-                    <div class="block3">
+                    <div class="pagination">
                         <ul>
-                            <li><img src="img/icons_svg/search.svg" alt="Search" style=" height: 23px; width: 23px;">
-                            </li>
-                            <li><img src="img/icons_svg/shoppingcart.svg" alt="shoppingcart"
-                                     style=" width: 22px; height: 20px;"></li>
-                            <li><img src="img/Userpic.png" alt="Userpic" style="width: 39px; height: 39px;"></li>
+                            <li><div class="search"></div></li>
+                            <li><div class="shoppingcart"></div> </li>
+                            <li> <div class="userpic"></div> </li>
                         </ul>
                     </div>
             </nav>
