--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         </div>
     </header> <!-- end header -->
     <div class="container">
-        <div class="presentation_book">
-            <div class="presentation_book1">
+        <div class="presentation_books">
+            <div class="presentation_book">
                 <p><span class="fontcaption"> The Da Vinci Code </span></p>
                 <p><span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 * </span></p>
                 <img src="img/bitmap.png" alt="Bitmap" style="width: 160px; height: 249px;">
             </div>
-            <div class="presentation_book2">
+            <div class="presentation_book">
                 <p><span class="fontcaption">A major update in the Detective section </span></p>
                 <img src="img/images.png" alt="Images" style="width: 180px; height: 272px;">
             </div>
