--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="presentation_books">
             <div class="presentation_book">
                 <img src="img/bitmap.png" alt="Bitmap" style="width: 160px; height: 249px;">
-                <p><span class="fontcaption"> The Da Vinci Code </span></p>
-                <p><span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 * </span></p>
+                <p><span class="fontcaption"> The Da Vinci Code </span> <br>
+                <span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 * </span></p>
             </div>
             <div class="presentation_book">
                 <img src="img/images.png" alt="Images" style="width: 180px; height: 272px;">
