add picture to homework 13.10

--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
             </nav>
             <div class="literature_writes">
                 <div class="comment1">
-                    <div><span class="fontcaption">John Fowles</span></div>
+                    <div class="writer_title"><span class="fontcaption">John Fowles</span></div>
                     <br>
-                    <div><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span
-                            class="literature_vote">| 5*</span></div>
-                    <br>
+                    <div class="writer_info"><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span
+                            class="literature_vote"> | 5 <img src="img/star.png" style="width: 18px; height: 17px;" alt="star"></span></div>
+                    <div class="clearfix"></div>
                     <div><span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
                             That was the tragedy. Not that one man had the courage to be evil.
                             But that milions had not the courage.</span></div>
