--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
             </nav>
             <div class="literature_writes">
                 <div class="comment1">
-                    <div class="writer_title"><span class="fontcaption">John Fowles</span></div>
+                    <div class="writer_title">
+                        <h2>John Fowles</h2>
+                    </div>
                     <br>
                     <div class="writer_info"><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span
                             class="literature_vote"> | 5 <img src="img/star.png" width="18" height="17" alt="star"></span></div>
@@ -240,7 +242,7 @@
                     <img src="img/fowles_djaongly.png" alt="fowles_djaongly" style="width: 331px; height: 497px;">
                 </div>
                 <div class="comment3">
-                    <div><span class="font_comment">About</span></div>
+                    <div><h3>About</h3></div>
                     <br>
                     <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span>
                     </p>
@@ -440,6 +442,65 @@
                 <li><span class="fontmenu"><a href="#">accessibilliti</a></span></li>
             </ul>
         </nav>
+        <hr>
+        <div class="footer_content">
+            <div class="footer_section_about">
+                <div class="section_about_header">
+                    <h2>About</h2>
+                    <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
+                    Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
+                    Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
+                </div>
+                <div class="footer_section_inner_box">
+                    <div class="footer_section_box">
+                        <div class="section_box">
+                            <h3>Ade books</h3>
+                            <p>Rare Books & Textbooks</p>
+                        </div>
+                        <div class="section_box">
+                            <h3>DpReview</h3>
+                            <p>Digital Photography</p>
+                        </div>
+                        <div class="section_box">
+                            <h3>Audible</h3>
+                            <p>Download Audio Books</p>
+                        </div>
+                    </div>
+                    <div class="footer_section_box">
+                        <div class="section_box">
+                            <h3>Junglee</h3>
+                            <p>Shop Online in India</p>
+                        </div>
+                        <div class="section_box">
+                            <h3>Look</h3>
+                            <p>Kids' Clothing & Shoes</p>
+                        </div>
+                        <div class="section_box">
+                            <h3>MYHABIT</h3>
+                            <p>Private Fashion Designer
+                                Sales</p>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- footer_section_about -->
+            <div class="footer_section_active">
+                <h2>Stay in touch</h2>
+                    <form>
+                        <input type="text" id="fname" name="fname" placeholder="Your E-mail">
+                        <input type="submit" value="Subscribe">
+                        <img src="img/icons_svg/mail.svg" alt="mail">
+                    </form>
+                <hr>
+                <div class="social">
+
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="footer_info">
+                <p>&#169; 2016 Bookworm. All rights reserved</p>
+            </div>
+        </div>
+
     </div>
 
 </body>
