change style futer section footer_social

--- a/index.html
+++ b/index.html
@@ -491,14 +491,23 @@
                         <img src="img/icons_svg/mail.svg" alt="mail">
                     </form>
                 <hr>
-                <div class="social">
+                <div class="footer_social">
+                    <h2>Follow as</h2>
+                    <div class="social_icon">
+                            <ul class="menu_social">
+                                <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
+                            </ul>
+                    </div>
 
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div class="footer_info">
-                <p>&#169; 2016 Bookworm. All rights reserved</p>
-            </div>
+        </div>
+        <div class="footer_info">
+            <p>&#169; 2016 Bookworm. All rights reserved</p>
         </div>
 
     </div>
