--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <div class="menu_logo">
                 </div>
                 <ul class="menu_list">
-                    <li><span class="fontmenu"><a href="#">Books</a></span></li>
-                    <li><span class="fontmenu"><a href="#">Writers</a></span></li>
-                    <li><span class="fontmenu"><a href="#">Publishers</a></span></li>
-                    <li><span class="fontmenu"><a href="#">Blog</a></span></li>
-                    <li><span class="fontmenu"><a href="#">Contact</a></span></li>
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">Writers</a></li>
+                    <li><a href="#">Publishers</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
                 <ul class="info_boks">
                     <li><div class="search"></div></li>
@@ -35,7 +35,7 @@
             <div class="bookschoice">
                 <div class="img_slider">
                     <div class="category_slider">
-                        <p><span class="fontmenu_title">Fantasy</span></p>
+                        <p>Fantasy</p>
                     </div>
                     <img src="img/cover.png" alt="bookharry" width="412" height="595">
                 </div>
@@ -64,38 +64,45 @@
                 <div class="presentation_book_img">
                     <img src="img/bitmap.png" alt="Bitmap" width="160" height="249">
                 </div>
-                <p><span class="fontcaption"> The Da Vinci Code </span> <br>
-                <span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"> </span> </p>
+                <div class="presentation_text">
+                    <h2> The Da Vinci Code </h2>
+                    <span class="fontcaption_orange">Dan Brown</span><span class="font_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"> </span>
+                </div>
+                <div class="clearfix"></div>
             </div>
             <div class="presentation_book">
                 <div class="presentation_book_img">
                     <img src="img/images.png" alt="Images" width="180" height="272">
                 </div>
-                <p><span class="fontcaption">A major update in the Detective section </span></p>
+                <div class="presentation_text">
+                    <h2>A major update in the Detective section </h2>
+                </div>
+                <div class="clearfix"></div>
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
-    <div class="container">
-            <p><span class="header">Shopfront</span></p>
+    <div class="container shopfront">
+        <h1>Shopfront</h1>
         <nav class="shopfrontmenu">
             <div class="shopfrontmenuleft">
                 <ul>
-                    <li><span class="font_menu"><a href="#">All</a></span></li>
-                    <li><span class="font_menu"><a href="#">Art & Photography</a></span></li>
-                    <li><span class="font_menu"><a href="#">Audio books</a></span></li>
-                    <li><span class="font_menu"><a href="#">Biography</a></span></li>
-                    <li><span class="font_menu"><a href="#">Business</a></span></li>
-                    <li><span class="font_menu"><a href="#">Children Book</a></span></li>
+                    <li><a href="#">All</a></li>
+                    <li><a href="#">Art & Photography</a></li>
+                    <li><a href="#">Audio books</a></li>
+                    <li><a href="#">Biography</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">Children Book</a></li>
                 </ul>
             </div>
             <div class="shopfrontmenuright">
                 <ul>
-                    <li><span class="font_menu"><a href="Popular">Popular</a></span></li>
+                    <li><a href="Popular">Popular</a></li>
                 </ul>
             </div>
+            <div class="clearfix"></div>
         </nav>
-        <div class="clearfix"></div>
+
     </div>
 
     <div class="container">
@@ -198,29 +205,29 @@
                     <li>
                         <a href=""><img src="img/books/17.png" alt="book" width="146" height="227"></a>
                         <p><span class="books_font_grey">Everything I Never Told You</span></p>
-                        <p><span class="books_font_orange">Celeste N</span>g</p>
+                        <p><span class="books_font_orange">Celeste Ng</span></p>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="clearfix"></div>
         <div class="container_button">
-            <a href="#" class="button7">кнопка</a>
+            <a href="#" class="btn">All books</a>
         </div>
     </div>
     <div class="container">
         <div class="popwrites">
-            <div class="popwrites_header"><p><span class="header">Popular writers</span></p></div>
+            <h1 class="popwrites_header"><h1>Popular writers</span></p></h1>
             <nav class="menupopular">
                 <ul>
-                    <li><span class="font_menu"><a href="#">Stefen King</a></span></li>
-                    <li><span class="font_menu"><a href="#">John Fowles</a></span></li>
-                    <li><span class="font_menu"><a href="#">James Patterson</a></span></li>
-                    <li><span class="font_menu"><a href="#">John Crisham</a></span></li>
-                    <li><span class="font_menu"><a href="#">Danielle Stil</a></span></li>
-                    <li><span class="font_menu"><a href="#">Ernest Hemingwey</a></span></li>
-                    <li><span class="font_menu"><a href="#">Dan Brown</a></span></li>
-                    <li><span class="font_menu"><a href="#">Rich Riordan</a></span></li>
+                    <li><a href="#">Stefen King</a></li>
+                    <li><a href="#">John Fowles</a></li>
+                    <li><a href="#">James Patterson</a></li>
+                    <li><a href="#">John Crisham</a></li>
+                    <li><a href="#">Danielle Stil</a></li>
+                    <li><a href="#">Ernest Hemingwey</a></li>
+                    <li><a href="#">Dan Brown</a></li>
+                    <li><a href="#">Rich Riordan</a></li>
                 </ul>
             </nav>
             <div class="literature_writes">
@@ -265,22 +272,22 @@
 
     <div class="container">
         <div class="literature_books">
-            <p><span class="header">Literature news</span></p>
+            <h1>Literature news</h1>
         </div>
         <div class="literature_news">
             <ul>
                 <li><a><img src="img/111.png" alt="picture" width="342" height="553"></a>
-                    <p><span class="fontcaption">How literature can help people cope with mental health problems</span></p>
+                    <h2>How literature can help people cope with mental health problems</h2></p>
                     <p><span class="fontcaption_orange">Nathan Sandoval </span> <span
                             class="fontcaption_grey"> | 15.10.16</span></p>
                 </li>
                 <li><a><img src="img/222.png" alt="picture" width="342" height="553"></a>
-                    <p><span class="fontcaption">Sales of 'Harry Potter and the Cursed Child' script book hit </span></p>
+                    <h2>Sales of 'Harry Potter and the Cursed Child' script book hit </h2></p>
                     <p><span class="fontcaption_orange">Jacqueline Taylor</span> <span
                             class="fontcaption_grey"> | 23.10.16</span></p>
                 </li>
                 <li><a><img src="img/333.png" alt="picture" width="342" height="553"></a>
-                    <p><span class="fontcaption">Marvel introduces character Riri Williams, a woman who takes ov</span></p>
+                    <h2>Marvel introduces character Riri Williams, a woman who takes ov</h2>
                     <p><span class="fontcaption_orange">Elizabeth Dixon </span> <span
                             class="fontcaption_grey">| 16.10.15</span></p>
                 </li>
@@ -288,32 +295,31 @@
         </div>
         <div class="literature_news_autor">
             <div class="block_news">
-                <p><span class="font_comment">Association of Former Agents of the United States Secret Service
-                            denounces anti-Clinton tell-all book - Politico</span></p>
+                <h3>Association of Former Agents of the United States Secret Service
+                            denounces anti-Clinton tell-all book - Politico</h3>
                 <p><span class="fontcaption_orange">Lori Steves </span> <span class="fontcaption_grey">| 15.10.16</span></p>
             </div>
             <div class="block_news">
-                <p><span class="font_comment">Edmonton bookseller, publisher and activist Mel Hurtig dies at 84 -CBC </span>
-                </p>
+                <h3>Edmonton bookseller, publisher and activist Mel Hurtig dies at 84 -CBC</h3>
                 <p><span class="fontcaption_orange">Michelle Taylor </span><span class="fontcaption_grey">| 28.10.16 </span>
                 </p>
             </div>
             <div class="block_news">
-                <p><span class="font_comment">5 Britons, 5 Americans, 2 Canadians and South African on short list for English
-                            literature's Man Booker Prize </span></p>
+                <h3>5 Britons, 5 Americans, 2 Canadians and South African on short list for English
+                            literature's Man Booker Prize</h3>
                 <p><span class="fontcaption_orange">Nicholas Guerrero</span><span class="fontcaption_grey">| 15.10.16</span>
                 </p>
             </div>
             <div class="block_news">
-                <p><span class="font_comment"> BBC to produce Les Miserables as 6 - part TV special
-                            - The Guardian </span></p>
+                <h3> BBC to produce Les Miserables as 6 - part TV special
+                            - The Guardian</h3>
                 <p><span class="fontcaption_orange">Cyntia Simmon</span> <span class="fontcaption_grey">| 28.10.16 </span>
                 </p>
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="button_all_news">
-            <button><span class="all_books">All news</span></button>
+        <div class="container_button">
+            <a href="#" class="btn">All news</a>
         </div>
     </div> <!-- end container -->
 
@@ -389,10 +395,10 @@
     <div class="container">
         <div class="publishers">
             <div class="description">
-                <p><span class="header">Publishers</span></p>
+                <h1>Publishers</h1>
                 <p><span class="text_info">In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam.</span>
                 </p>
-                <span class="all_books"> <button>Full list</button></span>
+                <span class="btn">  <a href="#" class="btn">All books</a></span>
             </div>
             <div class="partners">
                 <div class="partners_block">
