--- a/index.html
+++ b/index.html
@@ -441,11 +441,11 @@
     <div class="container">
         <nav class="menu_futer">
             <ul>
-                <li><span class="fontmenu"><a href="#">sitemap</a></span></li>
-                <li><span class="fontmenu"><a href="#">help</a></span></li>
-                <li><span class="fontmenu"><a href="#">delivery</a></span></li>
-                <li><span class="fontmenu"><a href="#">privacy policy</a></span></li>
-                <li><span class="fontmenu"><a href="#">accessibilliti</a></span></li>
+                <li><a href="#">sitemap</a></li>
+                <li><a href="#">help</a></li>
+                <li><a href="#">delivery</a></li>
+                <li><a href="#">privacy policy</a></li>
+                <li><a href="#">accessibilliti</a></li>
             </ul>
         </nav>
         <hr>
