modified slider first

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="booktext">
                 <p><span class="font_slider_grey">Harry Potter And  <br>
                                 The Sorcerer's Stone</span></p>
-                <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">| 5 *</span></p>
+                <p><span class="font_slider_orange">By Joan Rowling </span> <span class="font_slider_vote">5 <img src="img/star.png" width="18" height="17" alt="star"></span></p>
                 <span class="font_slider_comment"> Vestibulum rutrum quam vitae fringilla tincidunt.
                                     Suspendisse nec tortor urna.
                                     Ut laoreet sodales nisi, quis iaculis nulla iaculis vitae.</span>
@@ -217,7 +217,7 @@
     </div>
     <div class="container">
         <div class="popwrites">
-            <h1 class="popwrites_header"><h1>Popular writers</span></p></h1>
+            <h1 class="popwrites_header">Popular writers</h1>
             <nav class="menupopular">
                 <ul>
                     <li><a href="#">Stefen King</a></li>
@@ -237,7 +237,8 @@
                     </div>
                     <br>
                     <div class="writer_info"><span class="fontcaption_orange">31 March 1926 Leigh-on-Sea, Essex, England</span><span
-                            class="literature_vote"> | 5 <img src="img/star.png" width="18" height="17" alt="star"></span></div>
+                            class="literature_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"></span>
+                    </div>
                     <div class="clearfix"></div>
                     <div>
                         <span class="fontcaption_text">You are right. He did not. But  millions of Germans did betray their selves.
@@ -329,8 +330,8 @@
                 <img src="img/man.png" alt="man with dog" width="866" height="632">
             </div>
             <div class="slide_block3">
-                <p><span class="header">Lily atnd the octopus</span></p>
-                <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote">| 5 *</span></p>
+                <h1>Lily and the octopus</h1>
+                <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote">| 5 <img src="img/star.png" width="18" height="17" alt="star"></span></p>
                 <p><span class="text_info">In hac habitasse platea dictumst.
                             Vivamus adipiscing fermentum quam volutpat aliquam.
                             Integer et elit eget elit facilisis tristique.
@@ -343,7 +344,7 @@
 
     <div class="container background_books">
         <div class="discount">
-            <p><span class="header"> Discount for novel</span></p>
+            <h1> Discount for novel</h1>
             <p><span class="font_comment_text"> In hac habitasse platea dictumst. <br>
                             Vivamus adipiscing fermentum quam <br> volutpat aliquam.</span></p>
             <div class="procent">
@@ -367,27 +368,27 @@
     </div> <!-- end container -->
 
     <div class="container">
-        <div class="popular_series"><span class="header">Popular series</span></div>
+        <div class="popular_series"><h1>Popular series</h1></div>
         <div class="book_series">
-            <div class="book_1">
+            <div class="popular_book">
                 <img src="img/best1.png" alt="book" width="216" height="297">
                 <p><span class="book_series_fonts">Intellectual bestseller</span></p>
-                <p><span class="font_slider_vote">20</span></p>
+                <p><span class="font_slider_sum">20</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"></p>
             </div>
-            <div class="book_1">
+            <div class="popular_book">
                 <img src="img/horrorlibrary.png" alt="book" width="216" height="297">
                 <p><span class="book_series_fonts">Hobbies</span></p>
-                <p><span class="font_slider_vote">85</span></p>
+                <p><span class="font_slider_sum">85</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
             </div>
-            <div class="book_1">
+            <div class="popular_book">
                 <img src="img/childrensliterature.png" alt="book" width="216" height="297">
                 <p><span class="book_series_fonts">Childrens literature</span></p>
-                <p><span class="font_slider_vote">54</span></p>
+                <p><span class="font_slider_sum">54</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
             </div>
-            <div class="book_1">
+            <div class="popular_book">
                 <img src="img/nationalgeographic.png" alt="book" width="216" height="297">
                 <p><span class="book_series_fonts">National geographic</span></p>
-                <p><span class="font_slider_vote">21</span></p>
+                <p><span class="font_slider_sum">21</span> <img src="img/icons_svg/icon_book.png" width="15" height="17" alt="icon_book"> </p>
             </div>
             <div class="clearfix"></div>
         </div>
