modified fonts orange and add icon to slider

--- a/index.html
+++ b/index.html
@@ -279,17 +279,17 @@
             <ul>
                 <li><a><img src="img/111.png" alt="picture" width="342" height="553"></a>
                     <h2>How literature can help people cope with mental health problems</h2></p>
-                    <p><span class="fontcaption_orange">Nathan Sandoval </span> <span
+                    <p><span class="font_orange">Nathan Sandoval </span> <span
                             class="fontcaption_grey"> | 15.10.16</span></p>
                 </li>
                 <li><a><img src="img/222.png" alt="picture" width="342" height="553"></a>
                     <h2>Sales of 'Harry Potter and the Cursed Child' script book hit </h2></p>
-                    <p><span class="fontcaption_orange">Jacqueline Taylor</span> <span
+                    <p><span class="font_orange">Jacqueline Taylor</span> <span
                             class="fontcaption_grey"> | 23.10.16</span></p>
                 </li>
                 <li><a><img src="img/333.png" alt="picture" width="342" height="553"></a>
                     <h2>Marvel introduces character Riri Williams, a woman who takes ov</h2>
-                    <p><span class="fontcaption_orange">Elizabeth Dixon </span> <span
+                    <p><span class="font_orange">Elizabeth Dixon </span> <span
                             class="fontcaption_grey">| 16.10.15</span></p>
                 </li>
             </ul>
@@ -298,23 +298,23 @@
             <div class="block_news">
                 <h3>Association of Former Agents of the United States Secret Service
                             denounces anti-Clinton tell-all book - Politico</h3>
-                <p><span class="fontcaption_orange">Lori Steves </span> <span class="fontcaption_grey">| 15.10.16</span></p>
+                <p><span class="font_orange">Lori Steves </span> <span class="fontcaption_grey">| 15.10.16</span></p>
             </div>
             <div class="block_news">
                 <h3>Edmonton bookseller, publisher and activist Mel Hurtig dies at 84 -CBC</h3>
-                <p><span class="fontcaption_orange">Michelle Taylor </span><span class="fontcaption_grey">| 28.10.16 </span>
+                <p><span class="font_orange">Michelle Taylor </span><span class="fontcaption_grey">| 28.10.16 </span>
                 </p>
             </div>
             <div class="block_news">
                 <h3>5 Britons, 5 Americans, 2 Canadians and South African on short list for English
                             literature's Man Booker Prize</h3>
-                <p><span class="fontcaption_orange">Nicholas Guerrero</span><span class="fontcaption_grey">| 15.10.16</span>
+                <p><span class="font_orange">Nicholas Guerrero </span><span class="fontcaption_grey"> | 15.10.16</span>
                 </p>
             </div>
             <div class="block_news">
                 <h3> BBC to produce Les Miserables as 6 - part TV special
                             - The Guardian</h3>
-                <p><span class="fontcaption_orange">Cyntia Simmon</span> <span class="fontcaption_grey">| 28.10.16 </span>
+                <p><span class="font_orange">Cyntia Simmon</span> <span class="fontcaption_grey"> | 28.10.16 </span>
                 </p>
             </div>
         </div>
@@ -331,7 +331,7 @@
             </div>
             <div class="slide_block3">
                 <h1>Lily and the octopus</h1>
-                <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote">| 5 <img src="img/star.png" width="18" height="17" alt="star"></span></p>
+                <p><span class="font_slider_orange">Steven Rowley </span> <span class="font_slider_vote"> 5 <img src="img/star.png" width="18" height="17" alt="star"></span></p>
                 <p><span class="text_info">In hac habitasse platea dictumst.
                             Vivamus adipiscing fermentum quam volutpat aliquam.
                             Integer et elit eget elit facilisis tristique.
@@ -492,11 +492,11 @@
             </div> <!-- footer_section_about -->
             <div class="footer_section_active">
                 <h2>Stay in touch</h2>
-                    <form>
-                        <input type="text" id="fname" name="fname" placeholder="Your E-mail">
-                        <input type="submit" value="Subscribe">
-                        <img src="img/icons_svg/mail.svg" alt="mail">
-                    </form>
+                <form action="" class="subscribe">
+                    <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                    <input class="subscribe_button" type="submit" value="Subscribe">
+                    <img src="img/icons_svg/mail.svg" alt="mail">
+                </form>
                 <hr>
                 <div class="footer_social">
                     <h2>Follow as</h2>
