link change color

--- a/index.html
+++ b/index.html
@@ -461,29 +461,29 @@
                 <div class="footer_section_inner_box">
                     <div class="footer_section_box">
                         <div class="section_box">
-                            <h3>Ade books</h3>
+                            <h3><a href="#">Ade books</a></h3>
                             <p>Rare Books & Textbooks</p>
                         </div>
                         <div class="section_box">
-                            <h3>DpReview</h3>
+                            <h3><a href="#">DpReview</a></h3>
                             <p>Digital Photography</p>
                         </div>
                         <div class="section_box">
-                            <h3>Audible</h3>
+                            <h3><a href="#">Audible</a></h3>
                             <p>Download Audio Books</p>
                         </div>
                     </div>
                     <div class="footer_section_box">
                         <div class="section_box">
-                            <h3>Junglee</h3>
+                            <h3><a href="#">Junglee</a></h3>
                             <p>Shop Online in India</p>
                         </div>
                         <div class="section_box">
-                            <h3>Look</h3>
+                            <h3><a href="#">Look</a></h3>
                             <p>Kids' Clothing & Shoes</p>
                         </div>
                         <div class="section_box">
-                            <h3>MYHABIT</h3>
+                            <h3><a href="#">MYHABIT</a></h3>
                             <p>Private Fashion Designer
                                 Sales</p>
                         </div>
