modified menu and section popular writers

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </ul>
             </nav>
             <div class="literature_writes">
-                <div class="comment1">
+                <div class="section_about_autor">
                     <div class="writer_title">
                         <h2>John Fowles</h2>
                     </div>
@@ -246,21 +246,22 @@
                             But that milions had not the courage.</span>
                     </div>
                 </div>
-                <div class="comment2">
-                    <img src="img/fowles_djaongly.png" alt="fowles_djaongly" style="width: 331px; height: 497px;">
+                <div class="section_photo_autor">
+                    <img src="img/fowles_djaongly.png" alt="photo_autor" style="width: 331px; height: 497px;">
                 </div>
-                <div class="comment3">
-                    <div><h3>About</h3></div>
+                <div class="section_book_autor">
+                    <h3>About</h3>
                     <br>
                     <p><span class="font_comment_text">In hac habitasse platea dictumst. Vivamus adipiscing fermentum </span>
                     </p>
                     <br>
-                    <div><span class="font_comment">Books</span></div>
-                    <a href="#"><img src="img/b1.png" alt="book" width="73" height="114"></a>
-                    <a href="#"><img src="img/b2.png" alt="book" width="73" height="114"></a>
-                    <a href="#"><img src="img/b3.png" alt="book" width="73" height="114"></a>
-                    <a href="#"><img src="img/b4.png" alt="book" width="73" height="114"></a>
-                    <br>
+                    <h3>Books</h3>
+                    <div class="list_book">
+                        <a href="#"><img src="img/b1.png" alt="book" width="73" height="114"></a>
+                        <a href="#"><img src="img/b2.png" alt="book" width="73" height="114"></a>
+                        <a href="#"><img src="img/b3.png" alt="book" width="73" height="114"></a>
+                        <a href="#"><img src="img/b4.png" alt="book" width="73" height="114"></a>
+                    </div>
                     <div>
                         <span class="writer_page">to writer page</span>
                         <img src="img/rectangle.png" alt="rectangle">
@@ -277,17 +278,17 @@
         </div>
         <div class="literature_news">
             <ul>
-                <li><a><img src="img/111.png" alt="picture" width="342" height="553"></a>
+                <li><a href="#"><img src="img/111.png" alt="picture" width="342" height="553"></a>
                     <h2>How literature can help people cope with mental health problems</h2></p>
                     <p><span class="font_orange">Nathan Sandoval </span> <span
                             class="fontcaption_grey"> | 15.10.16</span></p>
                 </li>
-                <li><a><img src="img/222.png" alt="picture" width="342" height="553"></a>
+                <li><a href="#"><img src="img/222.png" alt="picture" width="342" height="553"></a>
                     <h2>Sales of 'Harry Potter and the Cursed Child' script book hit </h2></p>
                     <p><span class="font_orange">Jacqueline Taylor</span> <span
                             class="fontcaption_grey"> | 23.10.16</span></p>
                 </li>
-                <li><a><img src="img/333.png" alt="picture" width="342" height="553"></a>
+                <li><a href="#"><img src="img/333.png" alt="picture" width="342" height="553"></a>
                     <h2>Marvel introduces character Riri Williams, a woman who takes ov</h2>
                     <p><span class="font_orange">Elizabeth Dixon </span> <span
                             class="fontcaption_grey">| 16.10.15</span></p>
@@ -494,8 +495,8 @@
                 <h2>Stay in touch</h2>
                 <form action="" class="subscribe">
                     <input type="email" id="fname" name="fname" placeholder="Your E-mail">
-                    <input class="subscribe_button" type="submit" value="Subscribe">
-                    <img src="img/icons_svg/mail.svg" alt="mail">
+                    <button class="subscribe_button" type="submit" >Subscribe </button>
+                    <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
                 </form>
                 <hr>
                 <div class="footer_social">
